# ProdataGym

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: battery_leaderboard.md  cad_leaderboard.md
benchmarks/results/: dummy_2026-04-23.json  dummy_optimised_2026-04-23.json
docs/: BENCHMARKING.md  FEA_UPGRADE.md  INTEGRATION.md  TESTING.md
examples/battery/: 01_quickstart.ipynb  02_before_after_demo.ipynb  03_colab_rl_training.ipynb  run_benchmark.py
examples/cad/: 01_quickstart.ipynb  01_quickstart.py  02_colab_training_viz.ipynb  02_run_benchmark.py
prodata/: __init__.py
prodata/battery_gym/: __init__.py  task_schema.py
prodata/battery_gym/envs/: __init__.py  cell_design_env.py
prodata/battery_gym/scripts/: __init__.py  precompute_dataset.py
prodata/battery_gym/simulators/: __init__.py  electrochemical_sim.py
prodata/battery_gym/tasks/: cells_basic.json
prodata/battery_gym/verifiers/: __init__.py
prodata/battery_gym/verifiers/basic/: __init__.py  cell_verifier.py
prodata/battery_gym/verifiers/pro/: __init__.py
prodata/battery_gym/viz/: __init__.py  battery_viz.py
prodata/cad_gym/: GUIDE.md  __init__.py  task_schema.py
prodata/cad_gym/envs/: __init__.py  bracket_env.py
prodata/cad_gym/simulators/: __init__.py  mechanical_sim.py
prodata/cad_gym/tasks/: brackets_basic.json
prodata/cad_gym/viz/: __init__.py  training_viz.py
prodata/core/: __init__.py  base_env.py  base_simulator.py  base_verifier.py  episode_logger.py  task_schema.py
prodata/core/utils/: __init__.py  scoring.py
prodata/rf_gym/: __init__.py
prodata/solar_gym/: __init__.py
tests/: conftest.py
tests/test_battery_gym/: conftest.py  test_env.py  test_verifier.py
tests/test_cad_gym/: test_env.py  test_task_schema.py  test_verifier.py
tests/test_core/: test_scoring.py
(+4 files in other folders)
