[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodata"
version = "0.1.0"
description = "RL environments and verifiers for engineering design agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "gymnasium", "cad", "battery", "engineering", "rl-environments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core deps shared across all domains
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4",
    "trimesh>=4.0",
    "scipy>=1.11",
]
solar = [
    "pvlib>=0.10",
    "pandas>=2.0",
]
rf = [
    "scikit-rf>=1.0",
    "numpy>=1.24",
]
battery = [
    "pybamm>=24.0",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
all = [
    "prodata[cad]",
    "prodata[solar]",
    "prodata[rf]",
    "prodata[battery]",
]

[project.urls]
Homepage = "https://prodata.ai"
Repository = "https://github.com/prodata-ai/prodata"
Documentation = "https://docs.prodata.ai"
"Bug Tracker" = "https://github.com/prodata-ai/prodata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prodata*"]

[tool.setuptools.package-data]
"prodata" = ["*/tasks/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
